--- a/22-11-21/tailwind-prace/src/Navbar/navbar.css
+++ b/22-11-21/tailwind-prace/src/Navbar/navbar.css
@@ -1,4 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.nav {
+  background-color: #24232b;
+}
 /*# sourceMappingURL=navbar.css.map */
