--- a/22-11-21/tailwind-prace/src/Navbar/navbar.css
+++ b/22-11-21/tailwind-prace/src/Navbar/navbar.css
@@ -2,6 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 .nav {
-  background-color: #24232b;
+  background-color: #1f1f25;
 }
 /*# sourceMappingURL=navbar.css.map */
