--- a/22-11-21/tailwind-prace/src/MainPage/mainPage.scss
+++ b/22-11-21/tailwind-prace/src/MainPage/mainPage.scss
@@ -1,5 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .costum {
-    height: 3500px;
+    height: 3600px;
     background-color: #24232b;
 }
 
