--- a/22-11-21/tailwind-prace/src/Navbar/navbar.css
+++ b/22-11-21/tailwind-prace/src/Navbar/navbar.css
@@ -1,7 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-.nav {
+.active {
   background-color: #1f1f25;
+  -webkit-transition-timing-function: ease-in;
+          transition-timing-function: ease-in;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.nav {
+  background-color: transparent;
 }
 /*# sourceMappingURL=navbar.css.map */
