--- a/22-11-21/tailwind-prace/src/Navbar/navbar.scss
+++ b/22-11-21/tailwind-prace/src/Navbar/navbar.scss
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-.nav {
+.active {
     background-color: #1f1f25;
+    transition-timing-function: ease-in;
+    transition: 0.3s;
+}
+
+.nav {
+    background-color: transparent;
 }
