--- a/22-11-21/tailwind-prace/src/Navbar/navbar.css
+++ b/22-11-21/tailwind-prace/src/Navbar/navbar.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 .active {
   background-color: #1f1f25;
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
 }
 
 .nav {
   background-color: transparent;
+  -webkit-transition: background-color 250ms ease-in;
+  transition: background-color 250ms ease-in;
 }
 /*# sourceMappingURL=navbar.css.map */
