--- a/22-11-21/tailwind-prace/src/Navbar/navbar.scss
+++ b/22-11-21/tailwind-prace/src/Navbar/navbar.scss
@@ -4,9 +4,9 @@
 
 .active {
     background-color: #1f1f25;
-    transition: 0.2s;
 }
 
 .nav {
     background-color: transparent;
+    transition: background-color 250ms ease-in;
 }
