--- a/async-wait/react-async-await/src/HeadContent/HeadContent.scss
+++ b/async-wait/react-async-await/src/HeadContent/HeadContent.scss
@@ -33,4 +33,16 @@
       transform: rotate(360deg);
     }
   }
-  
+
+
+.synopsis {
+  &::before{
+    content: "";
+    top: 0;
+    bottom: -10px;
+    right: 0;
+    left: 0;
+    border-bottom: 2px solid white;
+    position: absolute;
+  }
+}
